--- a/_notebooks/2023-04-20-pop_quiz.ipynb
+++ b/_notebooks/2023-04-20-pop_quiz.ipynb
@@ -15,19 +15,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Title of Book: Starships\n",
-      "ID: 1759185231\n",
-      "Shelf Life: 6173800.0\n",
+      "ID: 936660526\n",
+      "Shelf Life: 1.24863E7\n",
       "Title of Book: Asteroids\n",
-      "ID: 1058020365\n",
-      "Shelf Life: 1.45347E7\n",
+      "ID: 1986007173\n",
+      "Shelf Life: 1.9943E7\n",
       "\n",
       "Book Count: 2\n"
      ]
@@ -90,19 +94,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Title of Book: The Awakening\n",
-      "ID: 1944019648\n",
-      "Shelf Life: 2515000.0\n",
+      "ID: 751854226\n",
+      "Shelf Life: 6568100.0\n",
       "Title of Book: Green Leaves\n",
-      "ID: 1119931946\n",
-      "Shelf Life: 8194900.0\n"
+      "ID: 367749621\n",
+      "Shelf Life: 9560200.0\n"
      ]
     }
    ],
@@ -160,18 +168,22 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Title of Book: Calculus AB\n",
-      "ID: 2098156043\n",
-      "Shelf Life: 3193500.0\n",
+      "ID: 843829239\n",
+      "Shelf Life: 6660100.0\n",
       "Title of Book: Calculus BC\n",
-      "ID: 1251145001\n",
-      "Shelf Life: 7630900.0\n"
+      "ID: 1015818190\n",
+      "Shelf Life: 1.66538E7\n"
      ]
     }
    ],
@@ -229,7 +241,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "17.0.6+10-Ubuntu-0ubuntu120.04.1"
   },
