--- a/_notebooks/2023-04-5-sorts.ipynb
+++ b/_notebooks/2023-04-5-sorts.ipynb
@@ -23,19 +23,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Sorted array:\n",
-      "14 15 82 95 101 169 179 196 198 242 270 273 284 318 352 376 414 433 438 440 441 462 498 510 523 549 556 589 592 617 660 679 694 700 761 773 774 797 801 808 816 850 909 922 923 932 945 946 969 987 \n",
-      "Number of swaps: 626\n",
+      "19 70 87 100 108 131 184 212 215 237 254 265 288 345 348 372 377 408 422 445 463 480 496 557 559 600 607 635 642 705 708 737 782 782 787 789 796 814 819 885 887 901 915 918 931 939 941 968 969 992 \n",
+      "Number of swaps: 650\n",
       "Number of compares: 1225\n",
-      "Time taken for one run: 8500 nanoseconds\n",
-      "Average time taken for 5000 runs: 14948 nanoseconds\n"
+      "Time taken for one run: 88600 nanoseconds\n",
+      "Average time taken for 5000 runs: 37588 nanoseconds\n"
      ]
     }
    ],
@@ -137,19 +141,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Sorted array:\n",
-      "20 26 58 62 72 75 118 148 211 216 250 256 260 273 287 305 351 357 371 379 379 385 408 461 462 483 493 518 563 605 628 631 637 679 683 728 752 763 797 809 853 855 857 867 871 887 892 929 937 967 \n",
-      "Number of swaps: 112\n",
+      "2 7 50 57 74 85 92 101 134 156 160 163 193 195 240 319 329 333 364 379 415 446 472 478 485 504 520 562 600 611 626 636 641 704 730 747 759 763 767 771 787 834 840 844 870 894 946 960 987 992 \n",
+      "Number of swaps: 143\n",
       "Number of compares: 1225\n",
-      "Time taken for one run: 7400 nanoseconds\n",
-      "Average time taken for 5000 runs: 9900 nanoseconds\n"
+      "Time taken for one run: 73600 nanoseconds\n",
+      "Average time taken for 5000 runs: 23885 nanoseconds\n"
      ]
     }
    ],
@@ -249,19 +257,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Sorted array:\n",
-      "39 44 64 94 105 152 161 169 177 180 190 207 219 240 240 244 297 303 309 316 325 330 430 448 456 479 511 513 527 531 543 557 611 635 727 740 745 752 760 772 785 813 891 909 914 919 930 937 938 995 \n",
-      "Number of swaps: 598\n",
+      "10 69 82 153 161 202 206 207 223 252 262 278 286 287 330 342 353 374 390 405 432 444 472 479 493 511 539 543 557 578 615 627 694 707 708 746 748 763 799 800 806 811 819 864 876 877 896 907 933 969 \n",
+      "Number of swaps: 689\n",
       "Number of compares: 49\n",
-      "Time taken for one run: 5700 nanoseconds\n",
-      "Average time taken for 5000 runs: 6452 nanoseconds\n"
+      "Time taken for one run: 9600 nanoseconds\n",
+      "Average time taken for 5000 runs: 21731 nanoseconds\n"
      ]
     }
    ],
@@ -358,19 +370,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Sorted array:\n",
-      "15 27 66 68 139 162 372 454 502 502 505 561 567 569 591 663 715 761 830 867 \n",
-      "Time taken for one run: 4500 nanoseconds\n",
-      "Number of swaps: 880352\n",
-      "Number of compares: 635172\n",
-      "Average time taken for 5000 runs: 6060 nanoseconds\n"
+      "13 24 54 68 89 109 131 164 179 179 181 183 221 227 233 244 304 309 326 329 369 389 396 404 409 461 471 489 563 594 597 607 645 718 734 736 743 768 772 817 829 910 914 929 930 963 966 972 977 993 \n",
+      "Time taken for one run: 111800 nanoseconds\n",
+      "Number of swaps: 1430572\n",
+      "Number of compares: 1110116\n",
+      "Average time taken for 5000 runs: 41563 nanoseconds\n"
      ]
     }
    ],
@@ -515,15 +531,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hashmap search average time: 2049.94 nanoseconds\n",
-      "Binary search average time: 2339.08 nanoseconds\n"
+      "Hashmap search average time: 2425.36 nanoseconds\n",
+      "Binary search average time: 2309.36 nanoseconds\n"
      ]
     }
    ],
@@ -644,7 +664,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "17.0.6+10-Ubuntu-0ubuntu120.04.1"
   },
