added extra credit

--- a/_notebooks/2023-04-25-frq-monkeys.ipynb
+++ b/_notebooks/2023-04-25-frq-monkeys.ipynb
@@ -326,6 +326,55 @@
     "\n",
     "Crossword.main(null);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58"
+     ]
+    }
+   ],
+   "source": [
+    "public class HighSum {\n",
+    "    public static int highestSum(int[][] arr) {\n",
+    "        int maxSum = -1; // initialize with -1, since all sums are non-negative\n",
+    "        int rowSum = 0;\n",
+    "        int colSum = 0;\n",
+    "        \n",
+    "        for (int i = 0; i < arr.length; i++) {\n",
+    "            rowSum = 0;\n",
+    "            colSum = 0;\n",
+    "            for (int j = 0; j < arr[i].length; j++) {\n",
+    "                rowSum += arr[i][j];\n",
+    "                colSum += arr[j][i];\n",
+    "            }\n",
+    "            if (rowSum > maxSum) {\n",
+    "                maxSum = rowSum;\n",
+    "            }\n",
+    "            if (colSum > maxSum) {\n",
+    "                maxSum = colSum;\n",
+    "            }\n",
+    "        }\n",
+    "        return maxSum;\n",
+    "    }\n",
+    "    public static void main(String[] args) {\n",
+    "        int[][] arr = {\n",
+    "            {12,5,19},\n",
+    "            {2,26,11},\n",
+    "            {34,8,16}\n",
+    "        };\n",
+    "        System.out.print(highestSum(arr));\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "HighSum.main(null);"
+   ]
   }
  ],
  "metadata": {
