--- a/_notebooks/2023-04-25-frq-monkeys.ipynb
+++ b/_notebooks/2023-04-25-frq-monkeys.ipynb
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -222,11 +222,11 @@
      "output_type": "stream",
      "text": [
       "Part (a):\n",
-      "Positive number at row=0, col=8? Should be true: true\n",
+      "Positive number at row=0, col=8? Should be true: false\n",
       "\n",
       "Part (b):\n",
       "Puzzle initialized from the Crossword constructor:\n",
-      "REPL.$JShell$52S$Crossword@7398a578\n"
+      "REPL.$JShell$52W$Crossword@6550a17c\n"
      ]
     }
    ],
@@ -304,18 +304,14 @@
     "    public static void main(String[] args)\n",
     "    {\n",
     "        boolean[][] cells = {\n",
-    "        {true, false, false, true, true, true, false, false, false},\n",
-    "        {false, false, false, false, true, false, false, false, false},\n",
-    "        {false, false, false, false, false, false, true, true, true},\n",
-    "        {false, false, true, false, false, false, true, false, false},\n",
-    "        {true, true, true, false, false, false, false, false, false},\n",
-    "        {false, false, false, false, true, false, false, false, false},\n",
-    "        {false, false, false, true, true, true, false, false, true}};\n",
+    "        {true, false, false, true},\n",
+    "        {false, false, false, false},\n",
+    "        {false, false, false, false},};\n",
     "        \n",
     "        Crossword game = new Crossword(cells);\n",
     "        \n",
     "        System.out.println(\"Part (a):\");\n",
-    "        boolean result = game.toBeLabeled(0, 8, cells);\n",
+    "        boolean result = game.toBeLabeled(0, 3, cells);\n",
     "        System.out.println(\"Positive number at row=0, col=8? Should be true: \" + result);\n",
     "        System.out.println();\n",
     "        System.out.println(\"Part (b):\");\n",
