--- a/_notebooks/2023-04-25-frq-monkeys.ipynb
+++ b/_notebooks/2023-04-25-frq-monkeys.ipynb
@@ -24,7 +24,11 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -128,7 +132,11 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -215,7 +223,11 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -325,8 +337,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -371,6 +387,47 @@
     "\n",
     "HighSum.main(null);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**********\n",
+      "*********\n",
+      "********\n",
+      "*******\n",
+      "******\n",
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "public void drawLine(int n) {\n",
+    "    for (int i = 1; i <= n; i++) { // iterates through i\n",
+    "        System.out.print(\"*\"); // prints \"*\" n times\n",
+    "         \n",
+    "    }\n",
+    "\n",
+    "    if (n > 0) { // only goes when when n is greater than 0 so that it doesn't overflow\n",
+    "        System.out.println();\n",
+    "        drawLine(n - 1);\n",
+    "    }\n",
+    "}\n",
+    "drawLine(10);"
+   ]
   }
  ],
  "metadata": {
@@ -380,8 +437,12 @@
    "name": "java"
   },
   "language_info": {
-   "name": "java",
-   "version": "2.7.18"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "17.0.6+10-Ubuntu-0ubuntu120.04.1"
   },
   "orig_nbformat": 4
  },
