--- a/_notebooks/2023-04-26-lab2-hacks.ipynb
+++ b/_notebooks/2023-04-26-lab2-hacks.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Macro Monkeys FRQs\n",
+    "# Lab 2 Hacks\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
