--- a/_notebooks/2023-04-25-frq-monkeys.ipynb
+++ b/_notebooks/2023-04-25-frq-monkeys.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Macro Monkeys FRQs\n",
+    "# FRQ Practices\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
@@ -24,11 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -132,11 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -223,11 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -260,6 +248,7 @@
     "            return number;\n",
     "        }\n",
     "    \n",
+    "        \n",
     "        public String toString() {\n",
     "            String result = \"\";\n",
     "            if (isBlackCell) {\n",
@@ -334,100 +323,6 @@
     "\n",
     "Crossword.main(null);"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "58"
-     ]
-    }
-   ],
-   "source": [
-    "public class HighSum {\n",
-    "    public static int highestSum(int[][] arr) {\n",
-    "        int maxSum = -1; // initialize with -1, since all sums are non-negative\n",
-    "        int rowSum = 0;\n",
-    "        int colSum = 0;\n",
-    "        \n",
-    "        for (int i = 0; i < arr.length; i++) {\n",
-    "            rowSum = 0;\n",
-    "            colSum = 0;\n",
-    "            for (int j = 0; j < arr[i].length; j++) {\n",
-    "                rowSum += arr[i][j];\n",
-    "                colSum += arr[j][i];\n",
-    "            }\n",
-    "            if (rowSum > maxSum) {\n",
-    "                maxSum = rowSum;\n",
-    "            }\n",
-    "            if (colSum > maxSum) {\n",
-    "                maxSum = colSum;\n",
-    "            }\n",
-    "        }\n",
-    "        return maxSum;\n",
-    "    }\n",
-    "    public static void main(String[] args) {\n",
-    "        int[][] arr = {\n",
-    "            {12,5,19},\n",
-    "            {2,26,11},\n",
-    "            {34,8,16}\n",
-    "        };\n",
-    "        System.out.print(highestSum(arr));\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "HighSum.main(null);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**********\n",
-      "*********\n",
-      "********\n",
-      "*******\n",
-      "******\n",
-      "*****\n",
-      "****\n",
-      "***\n",
-      "**\n",
-      "*\n"
-     ]
-    }
-   ],
-   "source": [
-    "public void drawLine(int n) {\n",
-    "    for (int i = 1; i <= n; i++) { // iterates through i\n",
-    "        System.out.print(\"*\"); // prints \"*\" n times\n",
-    "         \n",
-    "    }\n",
-    "\n",
-    "    if (n > 0) { // only goes when when n is greater than 0 so that it doesn't overflow\n",
-    "        System.out.println();\n",
-    "        drawLine(n - 1);\n",
-    "    }\n",
-    "}\n",
-    "drawLine(10);"
-   ]
   }
  ],
  "metadata": {
@@ -440,7 +335,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "17.0.6+10-Ubuntu-0ubuntu120.04.1"
   },
