--- a/_notebooks/2023-04-25-monkeys-hacks.ipynb
+++ b/_notebooks/2023-04-25-monkeys-hacks.ipynb
@@ -24,7 +24,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "void setArray(int[] arr, int n) {\n",
@@ -53,7 +57,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "//Example finding the max in an array. \n",
@@ -93,7 +101,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -133,10 +145,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58"
+     ]
+    }
+   ],
+   "source": [
+    "public class HighSum {\n",
+    "    public static int highestSum(int[][] arr) {\n",
+    "        int maxSum = -1; // initialize with -1, since all sums are non-negative\n",
+    "        int rowSum = 0;\n",
+    "        int colSum = 0;\n",
+    "        \n",
+    "        for (int i = 0; i < arr.length; i++) {\n",
+    "            rowSum = 0;\n",
+    "            colSum = 0;\n",
+    "            for (int j = 0; j < arr[i].length; j++) {\n",
+    "                rowSum += arr[i][j];\n",
+    "                colSum += arr[j][i];\n",
+    "            }\n",
+    "            if (rowSum > maxSum) {\n",
+    "                maxSum = rowSum;\n",
+    "            }\n",
+    "            if (colSum > maxSum) {\n",
+    "                maxSum = colSum;\n",
+    "            }\n",
+    "        }\n",
+    "        return maxSum;\n",
+    "    }\n",
+    "    public static void main(String[] args) {\n",
+    "        int[][] arr = {\n",
+    "            {12,5,19},\n",
+    "            {2,26,11},\n",
+    "            {34,8,16}\n",
+    "        };\n",
+    "        System.out.print(highestSum(arr));\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "HighSum.main(null);"
+   ]
   }
  ],
  "metadata": {
@@ -149,7 +207,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "17.0.6+10-Ubuntu-0ubuntu120.04.1"
   },
