add comments and finish last frq

--- a/_notebooks/2023-04-25-frq-monkeys.ipynb
+++ b/_notebooks/2023-04-25-frq-monkeys.ipynb
@@ -18,12 +18,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2018 CSA FRQ"
+    "## 2018 CSA FRQ Question 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -38,25 +38,28 @@
    "source": [
     "public class ArrayTester {\n",
     "    \n",
-    "\n",
-    "    public static int[] getColumn (int[][] arr2D, int c) {\n",
+    "    // returns an array that represents the column at index c in a 2D array\n",
+    "    public static int[] getColumn(int[][] arr2D, int c) {\n",
     "        int[] newArray = new int[arr2D.length];\n",
-    "\n",
     "        for (int r = 0; r < arr2D.length; r++) {\n",
     "            newArray[r] = arr2D[r][c];\n",
     "        }\n",
     "        return newArray;\n",
     "    }\n",
     "\n",
+    "    \n",
     "    public static boolean hasAllValues(int[] arr1, int[] arr2) {\n",
-    "        // always true simply for testing\n",
+    "        // getter for hasAllValues\n",
     "        return true;\n",
     "    }\n",
     "\n",
+    "    \n",
     "    public static boolean containsDuplicates(int[] arr) {\n",
+    "        // getter for determining duplicates\n",
     "        return false;\n",
     "    }\n",
     "\n",
+    "    // returns true if the 2D array square is a Latin square\n",
     "    public static boolean isLatin(int[][] square) {\n",
     "\n",
     "        // check rows of square for duplicates\n",
@@ -74,7 +77,8 @@
     "        for (int i = 0; i < square[0].length; i++) {\n",
     "            // get column at index\n",
     "            int[] col = getColumn(square, i);\n",
-    "            // check for duplicates in col\n",
+    "\n",
+    "            // check for duplicates in the columns of the two arrays\n",
     "            if (containsDuplicates(col)) {\n",
     "                return false;\n",
     "            }\n",
@@ -90,30 +94,34 @@
     "    }\n",
     "\n",
     "    public static void main(String[] args) {\n",
+    "        // create first 2D array\n",
     "        int[][] arr2D = {\n",
     "            {0,1,2},\n",
     "            {3,4,5},\n",
     "            {6,7,8},\n",
     "            {9,5,3}\n",
     "        };\n",
+    "\n",
+    "        // print out the first array\n",
     "        int[] newArray = ArrayTester.getColumn(arr2D, 1);\n",
-    "    \n",
     "        for (int i = 0; i < newArray.length; i++) {\n",
-    "        System.out.print(newArray[i] + \" \");\n",
+    "            System.out.print(newArray[i] + \" \");\n",
     "        }\n",
     "\n",
+    "        // create the second array\n",
     "        int[][] latinSq = {\n",
     "            {1,2,3},\n",
     "            {2,3,1},\n",
     "            {3,1,2}\n",
     "        };\n",
     "\n",
-    "        System.out.println(\"\");\n",
-    "        System.out.println(\"Is latin: \" + isLatin(latinSq));\n",
+    "        System.out.println(\"\"); \n",
+    "        System.out.println(\"Is latin: \" + isLatin(latinSq)); // tests whether the arrays are the same if they are flipped\n",
     "\n",
     "    }\n",
     "   \n",
     "}\n",
+    "\n",
     "ArrayTester.main(null);"
    ]
   },
@@ -122,12 +130,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2017 FRQ 4"
+    "## 2017 CSA FRQ Question 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -147,20 +155,24 @@
     "    int r;\n",
     "    int c;\n",
     "\n",
+    "    // Position constructor\n",
     "    public Position(int row, int col) {\n",
     "        this.r = row;\n",
     "        this.c = col;\n",
     "    }\n",
     "\n",
+    "    // method to return string representation of Position object\n",
     "    public String toString() {\n",
     "        String s = \"(\" + this.r + \",\" + this.c + \")\";\n",
     "        return s;\n",
     "    }\n",
     "\n",
+    "    // method to find the Position of a given value in a 2D array\n",
     "    public static Position findPosition(int val, int[][] arr) {\n",
-    "        // double for loop to iterate through rows and columns inside each row\n",
+    "        // nested for loop to iterate through rows and columns of the array\n",
     "        for (int i = 0; i < arr.length; i++) {\n",
     "            for (int j = 0; j < arr[i].length; j++) {\n",
+    "                // if the value is found in the array, create and return a new Position object\n",
     "                if (val == arr[i][j]) {\n",
     "                    Position p = new Position(i,j);\n",
     "                    return p;\n",
@@ -168,21 +180,24 @@
     "            }\n",
     "        }\n",
     "\n",
+    "        // if the value is not found in the array, return null\n",
     "        return null;\n",
     "    }\n",
     "\n",
+    "    // method to create a 2D array of Position objects that represent the positions of each element's successor in the given array\n",
     "    public static Position[][] getSuccessorArray(int[][] intArr) {\n",
     "        Position[][] newArr = new Position[intArr.length][intArr[0].length];\n",
+    "        // nested for loop to iterate through rows and columns of the array\n",
     "        for (int row=0; row < intArr.length; row++) {\n",
-    "\n",
     "            for (int col=0; col < intArr[0].length; col++) {\n",
-    "\n",
+    "                // get the successor of the current element in the array, and find its Position\n",
     "                newArr[row][col] = findPosition(intArr[row][col]+1, intArr);\n",
     "            }\n",
     "        }\n",
     "        return newArr;\n",
     "    } \n",
     "\n",
+    "    // main method for testing\n",
     "    public static void main(String[] args) {\n",
     "        int[][] arr = {\n",
     "            {15,5,9,10},\n",
@@ -190,8 +205,11 @@
     "            {14,8,13,7}\n",
     "        };\n",
     "\n",
-    "        Position[][] successor = getSuccessorArray(arr);\n",
+    "        // find the Position of the value 9 in the array, and print it\n",
     "        System.out.println(findPosition(9, arr));\n",
+    "\n",
+    "        // create a 2D array of Position objects that represent the positions of each element's successor in the given array, and print it\n",
+    "        Position[][] successor = getSuccessorArray(arr);\n",
     "        for (int i = 0; i < successor.length; i++) {\n",
     "            System.out.println(\"\");\n",
     "            for (int j = 0; j < successor[i].length; j++) { \n",
@@ -201,7 +219,8 @@
     "    }\n",
     "}\n",
     "\n",
-    "Position.main(null);"
+    "// call the main method to run the program\n",
+    "Position.main(null);\n"
    ]
   },
   {
@@ -209,12 +228,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2016 CSA FRQ"
+    "## 2016 CSA FRQ Question 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -226,29 +245,36 @@
       "\n",
       "Part (b):\n",
       "Puzzle initialized from the Crossword constructor:\n",
-      "REPL.$JShell$52W$Crossword@6550a17c\n"
+      "B 1 2 B \n",
+      "3 0 0 0 \n",
+      "4 0 0 0 \n",
+      "\n"
      ]
     }
    ],
    "source": [
     "public class Crossword {\n",
     "\n",
+    "    // A private inner Square class that represents a square in the puzzle\n",
     "    private Square[][] puzzle;\n",
-    "    \n",
+    "\n",
+    "    // A public inner Square class that represents a square in the puzzle\n",
     "    public class Square {\n",
     "        private boolean isBlackCell;\n",
     "        private int number;\n",
-    "    \n",
+    "\n",
+    "        // Constructor for a Square object\n",
     "        public Square(boolean isBlack, int num){\n",
     "            isBlackCell = isBlack;\n",
     "            number = num;\n",
     "        }\n",
-    "    \n",
+    "\n",
+    "        // Get the number associated with the square\n",
     "        public int getNumber() {\n",
     "            return number;\n",
     "        }\n",
-    "    \n",
-    "        \n",
+    "\n",
+    "        // Return a string representation of the square\n",
     "        public String toString() {\n",
     "            String result = \"\";\n",
     "            if (isBlackCell) {\n",
@@ -260,14 +286,16 @@
     "            return result;\n",
     "        }\n",
     "    }\n",
+    "\n",
+    "    // Constructor for a Crossword object that initializes the puzzle\n",
     "    public Crossword(boolean[][] blackSquares) {\n",
     "        puzzle = new Square[blackSquares.length][blackSquares[0].length];\n",
     "        int num = 1;\n",
+    "        // nested for loop that iterates through the 2D array\n",
     "        for (int i = 0; i < blackSquares.length; i++) {\n",
     "            for (int j = 0; j < blackSquares[0].length; j++) {\n",
-    "                if (blackSquares[i][j]) {\n",
+    "                if (blackSquares[i][j]) { // test if the array index is black\n",
     "                    puzzle[i][j] = new Square(true, 0);\n",
-    "                \n",
     "                }\n",
     "                else {\n",
     "                    if (toBeLabeled(i, j, blackSquares)) {\n",
@@ -281,29 +309,41 @@
     "            }\n",
     "        }\n",
     "    }\n",
+    "\n",
+    "    // Determines whether a square should be labeled with a number or not\n",
     "    public boolean toBeLabeled(int r, int c, boolean[][] blackSquares) {\n",
-    "        if (blackSquares[r][c]) {\n",
+    "        if (blackSquares[r][c]) { // tests if the square is black and makes it false\n",
     "            return false;\n",
     "        }\n",
     "\n",
-    "        if (r == 0 || c == 0) {\n",
+    "        if (r == 0 || c == 0) { // tests if its on the very left or very top of the crosswords and returns true\n",
     "            return true;\n",
     "        }\n",
     "\n",
-    "        if (blackSquares[r-1][c]) {\n",
-    "            return true;\n",
-    "        }\n",
-    "        \n",
-    "        if (blackSquares[r][c-1]) {\n",
+    "        if (blackSquares[r-1][c] && blackSquares[r][c-1]) { // has to be black on top and black on left for it to be true\n",
     "            return true;\n",
     "        }\n",
     "        else {\n",
     "            return false;\n",
     "        }\n",
     "    }\n",
-    "    \n",
+    "\n",
+    "    // Returns a string representation of the crossword puzzle\n",
+    "    public String toString() {\n",
+    "        String result = \"\";\n",
+    "        for (int i = 0; i < puzzle.length; i++) {\n",
+    "            for (int j = 0; j < puzzle[0].length; j++) {\n",
+    "                result += puzzle[i][j] + \" \";\n",
+    "            }\n",
+    "            result += \"\\n\";\n",
+    "        }\n",
+    "        return result;\n",
+    "    }\n",
+    "\n",
+    "    // Main method to test the Crossword class\n",
     "    public static void main(String[] args)\n",
     "    {\n",
+    "        // creates new crossword with black spots\n",
     "        boolean[][] cells = {\n",
     "        {true, false, false, true},\n",
     "        {false, false, false, false},\n",
@@ -321,7 +361,87 @@
     "    }\n",
     "}\n",
     "\n",
-    "Crossword.main(null);"
+    "// Run the main method to test the Crossword class\n",
+    "Crossword.main(null);\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2015 CSA FRQ Question 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****\n",
+      "H**+*\n",
+      "HARPS\n"
+     ]
+    }
+   ],
+   "source": [
+    "    public class HiddenWord {\n",
+    "\n",
+    "        public static String word;\n",
+    "\n",
+    "        // constructor for HiddenWord\n",
+    "        public HiddenWord(String word) {\n",
+    "            this.word = word;\n",
+    "        }\n",
+    "\n",
+    "        public String getHint(String guess) {\n",
+    "            String hint = \"\";\n",
+    "            for (int i = 0; i < guess.length(); i++) {\n",
+    "                if (guess.substring(i, i + 1).equals(word.substring(i, i + 1))) { \n",
+    "                    // tests if the element of the guess matches the element of the word\n",
+    "                    hint += guess.substring(i, i + 1);\n",
+    "                }\n",
+    "                else if (word.indexOf(guess.substring(i,i + 1)) != -1) {\n",
+    "                    // tests if the element is found anywhere in the array\n",
+    "                    hint += \"+\";\n",
+    "                }\n",
+    "                else {\n",
+    "                    hint += \"*\";\n",
+    "                }\n",
+    "            }  \n",
+    "            return hint;\n",
+    "            \n",
+    "        }\n",
+    "        \n",
+    "        public static void main(String[] args) {\n",
+    "            HiddenWord puzzle = new HiddenWord(\"HARPS\");\n",
+    "\n",
+    "            // guess with no correct letters\n",
+    "            String guess1 = \"KFLMC\";\n",
+    "            String hint1 = puzzle.getHint(guess1);\n",
+    "            System.out.println(hint1);\n",
+    "\n",
+    "            // guess with one right letter in right spot and one right letter in wrong spot\n",
+    "            String guess2 = \"HIFSK\";\n",
+    "            String hint2 = puzzle.getHint(guess2);\n",
+    "            System.out.println(hint2);\n",
+    "\n",
+    "            // guess with right word\n",
+    "            String guess3 = \"HARPS\";\n",
+    "            String hint3 = puzzle.getHint(guess3);\n",
+    "            System.out.println(hint3);\n",
+    "            \n",
+    "        }\n",
+    "\n",
+    "        \n",
+    "    }\n",
+    "\n",
+    "\n",
+    "HiddenWord.main(null);"
    ]
   }
  ],
